Corrected BEM syntax in text alignment utilities

--- a/app/assets/code_club/stylesheets/utilities/text-alignment.scss
+++ b/app/assets/code_club/stylesheets/utilities/text-alignment.scss
@@ -1,5 +1,5 @@
 //  Text alignment modifiers
-.u-text-center  { text-align: center  !important; }
-.u-text-justify { text-align: justify !important; }
-.u-text-left    { text-align: left    !important; }
-.u-text-right   { text-align: right   !important; }
+.u-text--center  { text-align: center  !important; }
+.u-text--justify { text-align: justify !important; }
+.u-text--left    { text-align: left    !important; }
+.u-text--right   { text-align: right   !important; }
